--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   width: 180px;
 
 }
+.text-body{
+  margin:20px auto;
+  width: 70%;
+  line-height: 1.25rem;
+  text-align: left;
+}
 
 li{
   list-style: none;
@@ -43,6 +49,13 @@ p, span{
 
 span{
   margin: 10px;
+  padding: 1%;
+ 
+}
+.author{
+  text-align: left;
+  margin-left: 15%;
+  color: #3b3b3b;
 }
 
 
@@ -69,6 +82,7 @@ span{
    font-weight: 800;
     color: #5a5a5a;
   }
+ 
   
 }
 
