--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,7 @@
   width: 180px;
 
 }
-.text-body{
-  margin:20px auto;
-  width: 70%;
-  line-height: 1.25rem;
-  text-align: left;
-}
+
 
 li{
   list-style: none;
@@ -57,6 +52,11 @@ span{
   margin-left: 15%;
   color: #3b3b3b;
 }
+.text-body{
+  padding: 2% 5%;
+  text-align: left;
+
+}
 
 
 @media (min-width: 760px) {
@@ -67,7 +67,6 @@ span{
   .article-card{
     width: 20%;
     height: 290px;
-  
   }
   header{
     text-align: left;
@@ -81,6 +80,11 @@ span{
     font-size: medium;
    font-weight: 800;
     color: #5a5a5a;
+  }
+  .text-body{
+    margin:20px auto;
+    width: 70%;
+    line-height: 1.25rem;
   }
  
   
