added sort functionality

--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,13 @@
 }
 
 .article-card{
-  background-color: #efefef;
+  background-color: #f5f3f3;
   margin: 2%;
   padding: 1rem 2rem;
 }
 
 .article-card{
   width: 180px;
-
 }
 
 
@@ -26,13 +25,12 @@ a{
   font-size: small;
   text-transform: uppercase;
  font-weight: bold;
- color: #aa871e;
+ color: #bb0303;
 }
-main h2{
-  color: #aa871e;
-  
-  font-size: small;
 
+main h2{
+  color: #ac5c5c;
+  font-size: small;
 }
 
 h3{
@@ -48,7 +46,7 @@ h2{
 }
 
 p, span{
-  color: #5a5a5a
+  color: #5a5a5a;
 }
 
 span{
@@ -82,6 +80,8 @@ span{
 
 
 
+
+
 @media (min-width: 760px) {
   ul li{
     display: inline-flex;
@@ -110,8 +110,6 @@ span{
     width: 70%;
     line-height: 1.25rem;
   }
- 
-  
 }
 
 
