--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 }
 .App {
 	text-align: center;
+	margin-bottom: 30px;
 }
 nav{
 	align-items: right;
@@ -35,7 +36,7 @@ p{
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
-li {
+li{
 	list-style: none;
 }
 a {
@@ -113,4 +114,13 @@ h2.title{
 	padding: 15px 47px;
 	border: 1px solid #fff;
 }
-
+.comment-item{
+	text-align: left;
+}
+.card-form-comment button{
+	border-radius: 6px;
+	padding: 8px 14px;
+	background-color: #dedede;
+	color: #909090;
+	border: none;
+}
