--- a/src/App.css
+++ b/src/App.css
@@ -128,3 +128,9 @@ h2.title{
 	margin-top: 50px;
 	color: red
 }
+.article {
+	margin-top: 30px;
+	margin-bottom: 30px;
+    border-bottom: 1px solid #dedede;
+	padding-bottom: 15px;
+}
